--- a/src/components/FindUs/FindUs.css
+++ b/src/components/FindUs/FindUs.css
@@ -91,3 +91,14 @@
     height: 200px;
   }
 }
+
+@media screen and (max-width : 650px) {
+  .findUs__container {
+    width: 100vw;
+  }
+  .findUs__container > img {
+    width: 100%;
+    border-radius: 8px;
+    margin: 2em 0;
+  }
+}
