--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   background: var(--light-color);
-  padding: 0em 2rem;
+  padding: 0em;
 }
 
 .app__navbar-logo {
@@ -111,6 +111,10 @@
 }
 
 @media screen and (max-width: 650px) {
+  .app__navbar {
+    width: 100%;
+    padding: 0;
+  }
   .app__navbar-logo img{
     height: 6vh;
   }
