--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 15%;
+  padding: 0;
 }
 
 /* Font template */
